--- a/style.css
+++ b/style.css
@@ -207,8 +207,8 @@ table td:hover {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 20px;
-    padding: 20px;
+    gap: 30px; 
+    padding: 30px; 
 }
 .row {
     display: flex;
@@ -218,11 +218,12 @@ table td:hover {
 }
 
 .card {
-    width: 18rem;
+    width: 20rem;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    margin-bottom: 20px; 
 }
 
 /* Efek hover */
