--- a/style.css
+++ b/style.css
@@ -82,6 +82,9 @@ form {
     width: 80%; 
     max-width: 600px; 
 }
+ .form-label {
+    font-weight: bold;
+  }
 
 input, textarea {
     font-family: inherit;
