--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-    background-color: #f8e6d1; 
+    background-color: #ffffff; 
     width: 80%;
     max-width: 800px;
     margin: 30px auto;
@@ -61,7 +61,7 @@ a:hover {
 
 /* Styling untuk tombol navigasi */
 .nav-container a {
-    background-color: #731210; 
+    background-color: #f8e6d1; 
     color: krem; /* Warna teks */
     font-weight: bold;
     padding: 10px 20px;
