--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Times New Roman", Times;
-    background-color: #ffffff; 
+    background-color: #faebd7; 
     color: white;
     text-align: center;
     margin: 30;
