--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-    background-color: #ffffff; 
+    background-color: #FFF5E1; 
     width: 80%;
     max-width: 800px;
     margin: 30px auto;
