--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ body {
 }
 
 .container {
-    background-color: #E0E0E0; 
+    background-color: #FFFFF0; 
     width: 80%;
     max-width: 800px;
     margin: 30px auto;
