--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 .header {
-      background-color: #556B2F; /* oliv */
-      color: #FFFFF0; /* ivory */
+      background-color: #9966CC; /* amethys */
+      color: #ECF3FB; /* pale sky */
       padding: 15px 20px;
       display: flex;
       align-items: center;
       justify-content: space-between;
       flex-wrap: wrap;
-      border-bottom: 2px solid #FFFFF0;
+      border-bottom: 2px solid #ECF3FB;
     }
 
     .logo-left {
@@ -25,19 +25,19 @@
       font-size: 22px;
       font-weight: bold;
       letter-spacing: 1px;
-      color: #FFFFF0;
+      color: #ECF3FB;
     }
 
     nav {
-      background-color: #556B2F; /* oliv */
+      background-color: #9966CC; /* amethys */
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      border-top: 1px solid #FFFFF0; /* ivory */
+      border-top: 1px solid #ECF3FB; /* pale sky */
     }
 
     nav a {
-      color: #ffffd7;
+      color: #ECF3FB;
       text-decoration: none;
       padding: 12px 18px;
       display: block;
