--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
     }
 
     nav a:hover {
-      background-color: #e6e6fa
+      background-color: #673ab7
       color: #000;
     }
 
@@ -104,7 +104,7 @@
 }
 
 .event-card a:hover {
-  background-color: #e6e6fa
+  background-color: #673ab7
   color: #ffffff;
 }
 
