--- a/style.css
+++ b/style.css
@@ -229,35 +229,20 @@ p {
     display: block;
 }
 
-table th {
-    background-color: #9966CC;
-    color: black;
-    padding: 14px;
-    text-align: left;
-    transition: background-color 0.3s ease, color 0.3s ease;
+.table {
+    background-color: #d4bee9 !important;
 }
 
-table th:hover {
-    background-color: #673AB7; 
-    color: white;
+.table th {
+    background-color: #9966CC !important;
 }
 
-table {
-    width: 80%;
-    margin: 20px auto; 
-    border-collapse: collapse; 
+.table td {
+    border: 2px solid black !important;
 }
 
-table td, table th {
-    border: 2px solid black;
-    padding: 14px;
-    font-size: 16px;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-table td:hover {
-    background-color: #673AB7; 
-    color: black;
+.table tbody tr:hover {
+    background-color: #d4bee9 !important;
 }
 
 .logo-gif {
