--- a/style.css
+++ b/style.css
@@ -230,7 +230,7 @@ p {
 }
 
 .table {
-    background-color: #d4bee9 !important;
+    background-color: #ede4f6 !important;
 }
 
 .table th {
@@ -245,34 +245,13 @@ p {
     background-color: #d4bee9 !important;
 }
 
-table th {
-    background-color: #9966CC;
-    color: black;
-    padding: 14px;
-    text-align: left;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
-
 table th:hover {
     background-color: #673AB7; 
     color: white;
 }
 
-table {
-    width: 80%;
-    margin: 20px auto; 
-    border-collapse: collapse; 
-}
-
-table td, table th {
-    border: 2px solid black;
-    padding: 14px;
-    font-size: 16px;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
-
 table td:hover {
-    background-color: #673AB7; 
+    background-color: #9966CC; 
     color: black;
 }
 
