--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     }
 
 .quote-section {
-  background-image: url('gambar-perpus.jpg'); /* ganti dengan nama file gambar kamu */
+  background-image: url('gambar/perpustakaan 1.webp'); /* ganti dengan nama file gambar kamu */
   background-size: cover;
   background-position: center;
   height: 120px;
