--- a/style.css
+++ b/style.css
@@ -84,18 +84,35 @@
   flex: 1 1 40%;
   max-height: 300px;
   overflow: hidden;
+  background-color: #f7f7f7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .event-image {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
+  max-height: 100%;
   display: block;
 }
 
 .event-info {
   flex: 1 1 60%;
   background-color: #fff;
+}
+
+.event-info .btn {
+  background-color: #ede4f6;
+  color: #333;
+  border: none;
+  transition: background-color 0.3s ease;
+}
+
+.event-info .btn:hover {
+  background-color: #9966CC;
+  color: #fff;
 }
 
 body {
