--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@
 .event-image {
   width: 100%;
   height: auto;
-  object-fit: cover;
+  object-fit: contain;
   max-height: 100%;
   display: block;
 }
