--- a/style.css
+++ b/style.css
@@ -1,49 +1,13 @@
-/* Styling tambahan untuk header */
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #9966CC; /* Warna yang sesuai dengan header */
-  padding: 10px 20px;
-}
-
-.center-title {
-  font-size: 24px;
-  font-weight: bold;
-  color: white; /* Warna tulisan di tengah */
-}
-
-/* Styling untuk navbar */
-.navbar {
-  background-color: #9966CC !important;  /* Navbar mengikuti warna header */
-  padding: 10px 20px;
-}
-
-.navbar-nav {
-  font-size: 16px;
-}
-
-.navbar-nav .nav-item {
-  margin-right: 20px;
-}
-
-/* Styling navbar untuk tampilan mobile */
-@media (max-width: 991px) {
-  .navbar-nav {
-    background-color: #9966CC;  /* Warna navbar di mobile sesuai dengan header */
-  }
-  
-  .navbar-nav .nav-item {
-    margin-bottom: 10px;
-  }
-
-  /* Menempatkan burger menu di kiri */
-  .navbar-toggler {
-    position: absolute;
-    left: 20px; /* Burger menu di kiri */
-    top: 15px;
-  }
-}
+      background-color: #9966CC; /* amethys */
+      color: #ECF3FB; /* pale sky */
+      padding: 15px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      border-bottom: 2px solid #ECF3FB;
+    }
 
     .logo-left {
       display: flex;
